fixed issue on mobile where images had no max-width

--- a/style.css
+++ b/style.css
@@ -380,6 +380,8 @@ img.alignnone,
 img.alignleft,
 img.aligncenter {
     margin: 20px auto;
+    max-width: 100%;
+    height: auto;
     display: block;
     float: none;
 }
